--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -2,6 +2,10 @@
 
 @tailwind components;
 
+html, body {
+  @apply h-full;
+}
+
 .btn-primary {
   @apply bg-blue-500 text-white font-bold py-2 px-4 rounded;
 
