--- a/lib/web/templates/layout/app.html.eex
+++ b/lib/web/templates/layout/app.html.eex
@@ -4,42 +4,13 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
     <title><%= gettext("ExVenture") %></title>
+
+    <%= render("_icons.html") %>
+    <%= render("_social.html") %>
+
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
-
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
-
-    <meta property="og:site_name" content="<%= gettext("ExVenture") %>" />
-
-    <%= if Map.has_key?(assigns, :open_graph_title) do %>
-      <meta property="og:title" content="<%= @open_graph_title %>" />
-    <% end %>
-
-    <%= if Map.has_key?(assigns, :open_graph_description) do %>
-      <meta property="og:description" content="<%= @open_graph_description %>" />
-    <% end %>
-
-    <%= if Map.has_key?(assigns, :open_graph_url) do %>
-      <meta property="og:url" content="<%= @open_graph_url %>" />
-    <% end %>
-
-    <meta name="twitter:card" content="summary" />
   </head>
   <body class="bg-gray-300 font-sans leading-normal tracking-normal">
     <nav class="bg-blue-600 p-2 mt-0 fixed w-full z-10 top-0">
