--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -42,6 +42,14 @@ html, body {
   @apply bg-gray-700;
 }
 
+nav .link {
+  @apply inline-block text-white no-underline py-2 px-2;
+
+  &:hover {
+    @apply text-gray-200;
+  }
+}
+
 .form {
   @apply bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4;
 }
