--- a/lib/web/templates/profile/show.html.eex
+++ b/lib/web/templates/profile/show.html.eex
@@ -6,4 +6,34 @@
       Edit
     <% end %>
   </div>
+
+  <div class="mt-4">
+    <h2 class="text-2xl">Characters</h2>
+
+    <div class="flex my-2">
+      <%= Enum.map(@characters, fn character -> %>
+        <div class="bg-white rounded p-4 mr-2">
+          <%= character.name %>
+          <%= link(to: Routes.character_path(@conn, :delete, character.id), alt: "Delete character", method: :delete, class: "ml-2") do %>
+            <i class="fas fa-times"></i>
+          <% end %>
+        </div>
+      <% end) %>
+    </div>
+
+    <div class="bg-white p-4 rounded w-64">
+      <h3 class="text-xl mb-2">New Character</h3>
+
+      <%= form_for(@conn, Routes.character_path(@conn, :create), [as: :character], fn f -> %>
+        <%= FormView.text_field(f, :name) %>
+
+        <div class="md:flex md:items-center mb-2">
+          <div class="md:w-1/3"></div>
+          <div class="md:w-2/3">
+            <%= submit("Create", class: "btn-primary") %>
+          </div>
+        </div>
+      <% end) %>
+    </div>
+  </div>
 </div>
