Load characters in the web client based on the user's characters

--- a/lib/web/templates/page/client.html.eex
+++ b/lib/web/templates/page/client.html.eex
@@ -1,1 +1,1 @@
-<div class="h-full" data-react-class="Components.App"></div>
+<%= ReactView.react_component("Components.App", %{characters: characters_for_client(@characters)}, class: "h-full") %>
