--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -6,6 +6,10 @@ html, body {
   @apply h-full;
 }
 
+iframe {
+  display: none;
+}
+
 .btn-primary {
   @apply bg-blue-500 text-white font-bold py-2 px-4 rounded;
 
