--- a/lib/web/templates/admin/zone/show.html.eex
+++ b/lib/web/templates/admin/zone/show.html.eex
@@ -51,17 +51,17 @@
   <div class="panel-container">
     <h2 class="text-lg">Map</h2>
 
-    <div class="flex flex-row">
+    <div class="flex flex-col">
       <%= Enum.map((@mini_map.max_z + 1)..(@mini_map.min_z - 1), fn z -> %>
         <div class="flex flex-col border-2 m-2 p-2">
           <h2 class="text-lg text-center">Z: <%= z %></h2>
           <%= Enum.map((@mini_map.max_y + 1)..(@mini_map.min_y - 1), fn y -> %>
-            <div class="flex flex-row">
+            <div class="flex flex-row justify-center">
               <%= Enum.map((@mini_map.min_x - 1)..(@mini_map.max_x + 1), fn x -> %>
                 <%= if cell = Map.get(@mini_map.cells, {x, y, z}) do %>
                   <%= link(to: Routes.admin_room_path(@conn, :show, cell.id)) do %>
                     <div class="w-16 h-16 border border-gray-600 rounded flex items-center justify-center m-2 bg-gray-400">
-                      <%= img_tag(Routes.static_path(@conn, "/images/map-icons/#{cell.map_icon}.svg"), alt: cell.name, class: "p-1") %>
+                      <%= img_tag(Routes.static_path(@conn, "/images/map-icons/#{cell.map_icon}.svg"), alt: cell.name, class: "p-1", title: cell.name) %>
                     </div>
                   <% end %>
                 <% else %>
