--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -11,10 +11,10 @@ iframe {
 }
 
 .btn-primary {
-  @apply bg-blue-500 text-white font-bold py-2 px-4 rounded;
+  @apply inline-flex items-center px-2.5 py-1.5 border border-transparent font-medium rounded shadow-sm text-white bg-blue-600;
 
   &:focus {
-    @apply outline-none ring;
+    @apply outline-none ring-2 ring-offset-2 ring-blue-500;
   }
 
   &:hover {
@@ -23,27 +23,27 @@ iframe {
 }
 
 .btn-secondary {
-  @apply bg-gray-200 font-bold py-2 px-2 rounded text-center;
+  @apply inline-flex items-center px-2.5 py-1.5 border border-transparent font-medium rounded text-blue-700 bg-blue-100 ;
+
+  &:focus {
+    @apply outline-none ring-2 ring-offset-2 ring-indigo-500;
+  }
+
+  &:hover {
+    @apply bg-blue-200;
+  }
+}
+
+.btn-inactive {
+  @apply bg-gray-500 text-white font-bold py-2 px-4 rounded;
 
   &:focus {
     @apply outline-none ring;
   }
 
   &:hover {
-    @apply bg-gray-400;
-  }
-}
-
-.btn-inactive {
-  @apply bg-gray-500 text-white font-bold py-2 px-4 rounded;
-}
-
-.btn-inactive:focus {
-  @apply outline-none ring;
-}
-
-.btn-inactive:hover {
   @apply bg-gray-700;
+  }
 }
 
 nav .link {
