--- a/lib/web/templates/layout/session.html.eex
+++ b/lib/web/templates/layout/session.html.eex
@@ -8,17 +8,21 @@
     <title><%= gettext("ExVenture") %></title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
   </head>
-  <body class="bg-gray-800">
-    <div class="container mx-auto mt-24 md:mt-16 h-screen">
+  <body class="bg-gray-200">
+    <div class="min-h-screen bg-gray-50 flex flex-col justify-center py-12 sm:px-6 lg:px-8">
       <%= if get_flash(@conn, :info) do %>
-        <div class="bg-blue-100 border border-blue-400 text-blue-700 px-4 py-3 rounded relative" role="alert">
-          <strong class="block sm:inline"><%= get_flash(@conn, :info) %></strong>
+        <div class="mb-8 sm:mx-auto sm:w-full sm:max-w-md">
+          <div class="bg-blue-100 border border-blue-400 text-blue-700 px-4 py-3 rounded relative" role="alert">
+            <strong class="block sm:inline"><%= get_flash(@conn, :info) %></strong>
+          </div>
         </div>
       <% end %>
 
       <%= if get_flash(@conn, :error) do %>
-        <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
-          <strong class="block sm:inline"><%= get_flash(@conn, :error) %></strong>
+        <div class="mb-8 sm:mx-auto sm:w-full sm:max-w-md">
+          <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
+            <strong class="block sm:inline"><%= get_flash(@conn, :error) %></strong>
+          </div>
         </div>
       <% end %>
 
