--- a/lib/web/templates/registration_reset/edit.html.eex
+++ b/lib/web/templates/registration_reset/edit.html.eex
@@ -1,33 +1,32 @@
-<h1 class="w-full text-center text-white text-2xl pb-8">Finalize your new password</h1>
+<div class="sm:mx-auto sm:w-full sm:max-w-md">
+  <%= img_tag("/images/exventure.png", class: "mx-auto h-32 w-auto", alt: "ExVenture Logo") %>
 
-<div class="flex justify-center w-full flex-wrap">
-  <div class="md:w-1/2">
-    <%= form_for(@changeset, Routes.registration_reset_path(@conn, :update), [class: "form"], fn f -> %>
+  <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
+    Finalize your new password
+  </h2>
+</div>
+
+<div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
+  <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
+    <%= form_for(@changeset, Routes.registration_reset_path(@conn, :update), [class: "space-y-6"], fn f -> %>
       <input type="hidden" name="token" value="<%= @token %>" />
 
-      <div class="md:flex md:items-center mb-6">
-        <div class="md:w-1/3">
-          <%= label(f, :password, class: "label") %>
-        </div>
-        <div class="md:w-2/3">
-          <%= text_input(f, :password, type: "password", class: "input") %>
+      <div>
+        <%= label(f, :password, class: "block text-sm font-medium text-gray-700") %>
+        <div class="mt-1">
+          <%= password_input(f, :password, required: true, class: "appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm") %>
         </div>
       </div>
 
-      <div class="md:flex md:items-center mb-6">
-        <div class="md:w-1/3">
-          <%= label(f, :password_confirmation, class: "label") %>
-        </div>
-        <div class="md:w-2/3">
-          <%= text_input(f, :password_confirmation, type: "password", class: "input") %>
+      <div>
+        <%= label(f, :password_confirmation, class: "block text-sm font-medium text-gray-700") %>
+        <div class="mt-1">
+          <%= password_input(f, :password_confirmation, required: true, class: "appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm") %>
         </div>
       </div>
 
-      <div class="md:flex md:items-center">
-        <div class="md:w-1/3"></div>
-        <div class="md:w-2/3">
-          <%= submit("Reset", class: "btn-primary") %>
-        </div>
+      <div>
+        <%= submit("Reset", class: "w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500") %>
       </div>
     <% end) %>
   </div>
