--- a/lib/web/templates/registration_reset/new.html.eex
+++ b/lib/web/templates/registration_reset/new.html.eex
@@ -1,22 +1,23 @@
-<h1 class="w-full text-center text-white text-2xl pb-8">Forgot your password?</h1>
+<div class="sm:mx-auto sm:w-full sm:max-w-md">
+  <%= img_tag("/images/exventure.png", class: "mx-auto h-32 w-auto", alt: "ExVenture Logo") %>
 
-<div class="flex justify-center w-full flex-wrap">
-  <div class="md:w-1/2">
-    <%= form_for(@changeset, Routes.registration_reset_path(@conn, :create), [class: "bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4"], fn f -> %>
-      <div class="md:flex md:items-center mb-6">
-        <div class="md:w-1/3">
-          <%= label(f, :email, class: "block text-gray-700 text-sm font-bold mb-2") %>
-        </div>
-        <div class="md:w-2/3">
-          <%= text_input(f, :email, type: :email, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline") %>
+  <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
+    Forgot your password?
+  </h2>
+</div>
+
+<div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
+  <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
+    <%= form_for(@changeset, Routes.registration_reset_path(@conn, :create), [class: "space-y-6 pb-6"], fn f -> %>
+      <div>
+        <%= label(f, :email, class: "block text-sm font-medium text-gray-700") %>
+        <div class="mt-1">
+          <%= text_input(f, :email, autocomplete: "email", required: true, autofocus: true, class: "appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm") %>
         </div>
       </div>
 
-      <div class="md:flex md:items-center">
-        <div class="md:w-1/3"></div>
-        <div class="md:w-2/3">
-        <%= submit("Reset", class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline") %>
-        </div>
+      <div>
+        <%= submit("Reset", class: "w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500") %>
       </div>
     <% end) %>
   </div>
