--- a/lib/web/templates/admin/room/_form.html.eex
+++ b/lib/web/templates/admin/room/_form.html.eex
@@ -4,21 +4,21 @@
 
     <div class="flex">
       <div class="flex flex-col md:flex-row items-center w-1/3">
-        <%= label(f, :x, value: override_value(assigns, :x), type: :number, class: "label md:text-right pr-3 md:w-1/3") %>
+        <%= label(f, :x, value: override_value(assigns, :x), class: "label md:text-right pr-3 md:w-1/3") %>
         <div class="flex flex-col w-full px-2">
           <%= text_input(f, :x, class: "input w-full md:w-32", value: override_value(assigns, :x)) %>
           <%= error_tag(f, :x) %>
         </div>
       </div>
       <div class="flex flex-col md:flex-row items-center w-1/3">
-        <%= label(f, :y, value: override_value(assigns, :y), type: :number, class: "label md:text-right pr-3 md:w-1/3") %>
+        <%= label(f, :y, value: override_value(assigns, :y), class: "label md:text-right pr-3 md:w-1/3") %>
         <div class="flex flex-col w-full px-2">
           <%= text_input(f, :y, class: "input w-full md:w-32", value: override_value(assigns, :y)) %>
           <%= error_tag(f, :y) %>
         </div>
       </div>
       <div class="flex flex-col md:flex-row items-center w-1/3">
-        <%= label(f, :z, value: override_value(assigns, :z), type: :number, class: "label md:text-right pr-3 md:w-1/3") %>
+        <%= label(f, :z, value: override_value(assigns, :z), class: "label md:text-right pr-3 md:w-1/3") %>
         <div class="flex flex-col w-full px-2">
           <%= text_input(f, :z, class: "input w-full md:w-32", value: override_value(assigns, :z)) %>
           <%= error_tag(f, :z) %>
