--- a/lib/web/templates/profile/show.html.eex
+++ b/lib/web/templates/profile/show.html.eex
@@ -10,28 +10,34 @@
   <div class="mt-4">
     <h2 class="text-2xl">Characters</h2>
 
-    <div class="flex my-2">
-      <%= Enum.map(@characters, fn character -> %>
-        <div class="bg-white rounded p-4 mr-2">
-          <%= character.name %>
-          <%= link(to: Routes.character_path(@conn, :delete, character.id), alt: "Delete character", method: :delete, class: "ml-2") do %>
-            <i class="fas fa-times"></i>
-          <% end %>
-        </div>
-      <% end) %>
+    <div class="py-4">
+      <ul class="mt-3 grid grid-cols-1 gap-5 sm:gap-6 sm:grid-cols-2 lg:grid-cols-4">
+        <%= Enum.map(@characters, fn character -> %>
+          <li class="col-span-1 flex shadow-sm rounded-md">
+            <div class="flex-1 flex items-center justify-between border-t border-r border-b border-gray-200 bg-white rounded-r-md truncate">
+              <div class="flex-1 px-4 py-2 text-sm truncate">
+                <%= character.name %>
+              </div>
+              <div class="flex-shrink-0 pr-2">
+                <%= link(to: Routes.character_path(@conn, :delete, character.id), alt: "Delete character", method: :delete, class: "w-8 h-8 bg-white inline-flex items-center justify-center text-gray-400 rounded-full bg-transparent hover:text-gray-500 focus:outline-none") do %>
+                  <span class="sr-only">Delete Character</span>
+                  <i class="fas fa-times"></i>
+                <% end %>
+              </div>
+            </div>
+          </li>
+        <% end) %>
+      </ul>
     </div>
 
-    <div class="bg-white p-4 rounded w-64">
+    <div class="bg-white p-4 rounded mt-8 sm:mx-auto sm:w-full sm:max-w-md">
       <h3 class="text-xl mb-2">New Character</h3>
 
       <%= form_for(@conn, Routes.character_path(@conn, :create), [as: :character], fn f -> %>
         <%= FormView.text_field(f, :name) %>
 
-        <div class="md:flex md:items-center mb-2">
-          <div class="md:w-1/3"></div>
-          <div class="md:w-2/3">
-            <%= submit("Create", class: "btn-primary") %>
-          </div>
+        <div>
+          <%= submit("Create", class: "btn-primary w-full flex justify-center") %>
         </div>
       <% end) %>
     </div>
