--- a/lib/web/templates/admin/zone/_form.html.eex
+++ b/lib/web/templates/admin/zone/_form.html.eex
@@ -1,4 +1,6 @@
 <%= form_for(@changeset, @url, fn f -> %>
+  <%= FormView.text_field(f, :key) %>
+
   <%= FormView.text_field(f, :name) %>
 
   <%= FormView.textarea_field(f, :description, rows: 5) %>
