--- a/lib/web/templates/admin/room/_form.html.eex
+++ b/lib/web/templates/admin/room/_form.html.eex
@@ -27,6 +27,8 @@
     </div>
   </div>
 
+  <%= FormView.text_field(f, :key) %>
+
   <%= FormView.text_field(f, :name) %>
 
   <%= FormView.textarea_field(f, :description, rows: 5) %>
