--- a/lib/web/templates/session/new.html.eex
+++ b/lib/web/templates/session/new.html.eex
@@ -35,6 +35,35 @@
       <div>
         <%= submit("Log In", class: "w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500") %>
       </div>
+
+      <%= if Config.deploy_env() == "development" do %>
+        <h3 class="text-xl font-bold mt-4">Sign in with existing user</h3>
+        <ul class="divide-y divide-gray-200">
+          <%= Enum.map(ExVenture.Users.all(), fn user -> %>
+            <li>
+              <%= link(to: "#", class: "py-4 block flex justify-between user", data: [email: user.email]) do %>
+                <p><%= user.username %></p>
+                <p class="text-sm text-gray-500"><%= user.email %></p>
+              <% end %>
+            </li>
+          <% end) %>
+        </ul>
+      <% end %>
     <% end) %>
   </div>
 </div>
+
+<%= if Config.deploy_env() == "development" do %>
+<script type="application/javascript">
+document.addEventListener("DOMContentLoaded", (e) => {
+  document.querySelectorAll(".user").forEach((userNode) => {
+    userNode.addEventListener("click", (e) => {
+      e.preventDefault();
+      document.querySelector("#user_email").value = userNode.dataset.email;
+      document.querySelector("#user_password").value = "password";
+      document.querySelector("form").submit();
+    });
+  });
+});
+</script>
+<% end %>
